# wxocr2

./: .gitattributes  .gitmodules  Dockerfile  README.md  index.html  main.py  pyproject.toml
.github/workflows/: image.yaml
scripts/: docker_ops.py
