[project]
name = "wxocr"
version = "0.1.0"
description = "WeChat OCR Service"
authors = [
    {name = "yuchanns", email = "airamusume@gmail.com"}
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "pydantic>=2.11.4",
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "aiopath>=0.7.7",
]
requires-python = ">=3.12"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
venvPath = "."
venv = ".venv"
reportMissingModuleSource = false

[tool.pdm]
package-dir = "."
[tool.pdm.scripts]
dev = "python main.py --reload"
lint = "ruff check --fix ."
format = "ruff format ."

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]

